Fixed alignment issue with icons

--- a/source/sass/elements/_icon.scss
+++ b/source/sass/elements/_icon.scss
@@ -132,7 +132,7 @@ $icon-users: "\ea46";
   &--theme {
     color: $color-theme;
   }
-  .label & {
+  .list--concept .label & {
       vertical-align: middle;
       margin-left: .5em;
   }
